--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border: 1px solid black;
 }
 a{
     display: block;
