--- a/style-pitanja.css
+++ b/style-pitanja.css
@@ -3,7 +3,7 @@
 }
 
 *, *::after, *::before{
-    font-family: arial;
+    font-family: Roboto;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -11,44 +11,86 @@
 body{
     width: 100vw;
     height: 100vh;
-    background: url(pozadina.jpg);
+    background: linear-gradient(to bottom, #222, #333);
 }
-
-nav{
+#slika-kontejner{
     width: 100vw;
-    height: 20vh;
+    height: 40vh;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    background: rgba(0, 0, 0, .2)
 }
-
-a{
-    display: block;
-    width: var(--logo);
-    height: var(--logo);
+#tekst-iznad-slike{
+    font-size: 1.5rem;
+    color: white;
+    z-index: 3;
+    letter-spacing: 3px;
+    margin: 20px 0;
 }
-a img{
-    width: var(--logo);
-    height: var(--logo);
-    border: 1px solid orange;
-    border-radius: 50%;
-    opacity: 1;
+.btn{
+    width: 80vw;
+    min-height: 100px;
+    font-size: 1.2rem;
 }
-#logo {
+#pitanje{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    position: relative;
+    width: calc(100% - 2rem);
+    height: calc(40vh - 40px - 1.2rem);
     margin-right: 1rem;
+    margin-left: 1rem;
 }
 
-#jezik {
-    margin-left: 1rem;
-    color: #eee;
-    text-shadow: 0 0 10px grey;
-    font-weight: 900;
-    font-size: 1.3rem;
+#pitanje img{
+    width: 100%;
+    height: 100%;
+    filter: blur(2px);
+}
+#pitanje p{
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100% !important;
+    background-color:rgba(0, 0, 0, .4);
+    font-size: 1rem;
+    color:white;
+    z-index: 2;
+    line-height: 2rem;
+    font-size: 2rem;
+    margin: 1rem;
+    overflow-y: auto;
+    padding: 1rem;
+    letter-spacing: 2px;
+    justify-content:center;
+    align-items: center;
+}
+#linija{
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    margin-top: 5px;
+    bottom: 0;
+    z-index: 3;
+}
+#broj-pitanja{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    padding: 1rem 2rem;
+    padding-bottom: 0;
+}
+#broj-pitanja span{
+    color:white ;
+    font-size: 1.1rem;
+    margin: 0 5px;
 }
 
 .container {
-    height: 80vh;
+    height: 60vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -56,35 +98,7 @@ a img{
     align-items: center;
 }
 
-.container p b{
-    font-size: 2rem;
-    letter-spacing: 2px;
-}
-
-.container p i{
-    font-size: 1rem;
-    letter-spacing: 2px;
-    font-weight: 600;
-}
-
-.container p {
-    text-align: center;
-    font-size: 3rem;
-    color: white;
-    letter-spacing: 5px;
-    margin: 0;
-}
-
-.container a{
-    display: flex;
-    width: 100%;
-    height: auto;
-    align-items: center;
-    justify-content: center;
-}
-
 .btn{
-    width: 80vw;
-    min-height: 100px;
-    font-size: 1.2rem;
+    letter-spacing: 3px;
+    font-size: 1.3rem;
 }
