--- a/style-pitanja.css
+++ b/style-pitanja.css
@@ -103,3 +103,49 @@ body{
     letter-spacing: 3px;
     font-size: 1.3rem;
 }
+
+#kraj{
+    width: 100vw;
+    height: 100vh;
+    background: #111111dd;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    color: white;
+    font-size: 1.75rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    letter-spacing: 3px;
+    transform: translateY(-100%);
+}
+#kraj p{
+    margin-top: 50px;
+    font-size: 2.5rem;
+    text-align: center;
+    font-weight:900;
+
+}
+
+#kraj span{
+    letter-spacing: 10px;
+    text-align: center;
+}
+
+.prikazi{
+    animation-name: animacija;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+}
+@keyframes animacija {
+    from{
+        transform: translateY(-100%);
+    }
+    to{
+        transform: translateY(0);
+    }
+}
